--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import 'react-toastify/dist/ReactToastify.css';
+@import "react-toastify/dist/ReactToastify.css";
 
 :root {
   --toastify-color-success: #00c851;
@@ -6,22 +6,32 @@
 
   --toastify-icon-color-success: var(--toastify-color-success);
   --toastify-icon-color-error: var(--toastify-color-error);
-  --toastify-color-progress-light: linear-gradient(to right,
-      #4cd964,
-      #5ac8fa,
-      #007aff,
-      #34aadc,
-      #5856d6,
-      #ff2d55,
-      #bb86fc);
-  --toastify-color-progress-success: linear-gradient(to right,
-      #BADDA5,
-      #40B49D,
-      #82C99D,
-      #004d7a,
-      #008793,
-      #00bf72,
-      #a8eb12);
-  --toastify-color-progress-error: linear-gradient(to right,
-      #da55bd, #ea3c9e, #f3217c, #f30657, #eb1230);
+  --toastify-color-progress-light: linear-gradient(
+    to right,
+    #4cd964,
+    #5ac8fa,
+    #007aff,
+    #34aadc,
+    #5856d6,
+    #ff2d55,
+    #bb86fc
+  );
+  --toastify-color-progress-success: linear-gradient(
+    to right,
+    #badda5,
+    #40b49d,
+    #82c99d,
+    #004d7a,
+    #008793,
+    #00bf72,
+    #a8eb12
+  );
+  --toastify-color-progress-error: linear-gradient(
+    to right,
+    #da55bd,
+    #ea3c9e,
+    #f3217c,
+    #f30657,
+    #eb1230
+  );
 }
